--- a/src/main/resources/view/Welcome.fxml
+++ b/src/main/resources/view/Welcome.fxml
@@ -1,16 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane fx:id="welcomePage" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.hasindu.spiceshop.controller.WelcomeController">
    <children>
-      <Label layoutX="317.0" layoutY="253.0" text="Welcome">
-         <font>
-            <Font size="64.0" />
-         </font>
-      </Label>
+      <ImageView fitHeight="600.0" fitWidth="471.0" layoutX="500.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/welcome%20image.jpg" />
+         </image>
+      </ImageView>
+      <Pane layoutX="78.0" layoutY="64.0" prefHeight="472.0" prefWidth="340.0">
+         <children>
+            <Label layoutX="82.0" layoutY="137.0" text="Welcome">
+               <font>
+                  <Font name="System Bold" size="40.0" />
+               </font>
+            </Label>
+            <Label layoutX="105.0" layoutY="206.0" text="Spice Shop">
+               <font>
+                  <Font name="System Bold" size="25.0" />
+               </font>
+            </Label>
+            <Button fx:id="btnGetStart" layoutX="105.0" layoutY="299.0" mnemonicParsing="false" onAction="#btnGetStartOnAction" prefHeight="36.0" prefWidth="129.0" style="-fx-background-color: #000000; -fx-background-radius: 15;" text="Get Start" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Button>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
